--- a/styless.css
+++ b/styless.css
@@ -615,8 +615,8 @@ footer{
         margin-top: 6rem; /* keep header spacing */
         background-size: cover;
     }
-}
-@media screen and (max-width: 768px) {
+}*/
+/*@media screen and (max-width: 768px) {
     .header-container {
         flex-direction: column;
         gap: 1rem;
@@ -803,4 +803,5 @@ footer{
         text-align: center;
     }
 }*/
+
 
