--- a/styless.css
+++ b/styless.css
@@ -612,7 +612,7 @@ footer{
     body {
         padding: 1rem;
         margin: 0;
-        margin-top: 6rem; /* keep header spacing */
+        margin-top: 6rem; <!--keep header spacing -->
         background-size: cover;
     }
 }*/
@@ -803,5 +803,6 @@ footer{
         text-align: center;
     }
 }*/
+
 
 
